project(grpccpClient CXX)
cmake_minimum_required(VERSION 3.0)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_COLOR_MAKEFILE ON)
set (CMAKE_CXX_EXTENSIONS OFF)
set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fPIC)

if (NOT CMAKE_BUILD_TYPE)
    message(STATUS "Default build type 'Debug'")
    set(CMAKE_BUILD_TYPE DEBUG CACHE STRING "" FORCE )
else()
    string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
    message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
endif()

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_3RD_LOC ${CMAKE_CURRENT_SOURCE_DIR}/Third_Party)
list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_PROJECT_DIR})
find_package(Python REQUIRED)
find_package(SpdLog)

if(3RD_PARTY_INSTALL_STEP)
    include(installThirdParty)
endif()

if(COMPILATION_STEP)
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
    set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_DIR}/bin)
    set(CMAKE_BINARY_DIR ${PROJECT_DIR}/bin)
    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_DIR}/bin)
    set(PROJECT_3RD_LOC ${CMAKE_CURRENT_SOURCE_DIR}/Third_Party)
    #Pre build step
    set(CORE_NO_3RD_PARTY True)
    set(CORE_NO_GLOBAL_HANDLING True)
    set(CORE_COMPILE True)
    set(CORE_SPDLOG_SUPPORT True)
    add_subdirectory(${PROJECT_DIR}/Core)
    set(pyCppconn_STAND_ALONE False)
    #pycppconn core root location to be that of grpccClient
    SET(pycppconn_CORE_ROOT_LOCATION ${PROJECT_DIR} CACHE STRING "Will set the Core library root location" FORCE)
    #add_subdirectory(${PROJECT_DIR}/Python_Cpp_Connectivity)
    #add_subdirectory(${PROJECT_DIR}/src/Wrappers)
endif()